# build/swagger.json
@@ -766,11 +766,25 @@
             "nullable": true,
             "description": "记录删除时间"
           },
+          "languageList": {
+            "items": {
+              "$ref": "#/components/schemas/LanguageItemType"
+            },
+            "type": "array"
+          },
+          "id": {
+            "type": "string"
+          },
           "title": {
             "type": "string"
           },
           "parentId": {
-            "$ref": "#/components/schemas/mongoose.Types.ObjectId"
+            "allOf": [
+              {
+                "$ref": "#/components/schemas/mongoose.Types.ObjectId"
+              }
+            ],
+            "nullable": true
           },
           "level": {
             "type": "number",
@@ -778,7 +792,7 @@
             "nullable": true
           }
         },
-        "required": ["title", "parentId"],
+        "required": ["languageList", "id", "title"],
         "type": "object",
         "additionalProperties": false
       },
@@ -820,6 +834,39 @@
         },
         "type": "object",
         "additionalProperties": false
+      },
+      "Pick_CateDTO.title-or-level_": {
+        "properties": {
+          "title": {
+            "type": "string"
+          },
+          "level": {
+            "type": "number",
+            "format": "double"
+          }
+        },
+        "required": ["title", "level"],
+        "type": "object",
+        "description": "From T, pick a set of properties whose keys are in the union K"
+      },
+      "Partial_Pick_CateDTO.id__": {
+        "properties": {
+          "id": {
+            "type": "string"
+          }
+        },
+        "type": "object",
+        "description": "Make all properties in T optional"
+      },
+      "EditCateDTO": {
+        "allOf": [
+          {
+            "$ref": "#/components/schemas/Pick_CateDTO.title-or-level_"
+          },
+          {
+            "$ref": "#/components/schemas/Partial_Pick_CateDTO.id__"
+          }
+        ]
       },
       "BaseObjectEntity_CateDTO-or-null_": {
         "properties": {
@@ -2009,7 +2056,7 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/CateDTO"
+                "$ref": "#/components/schemas/EditCateDTO"
               }
             }
           }
