# controllers/CateController.ts
@@ -3,7 +3,10 @@ import { Request as ExpressRequest } from 'express'
 import { BaseController } from "./BaseController";
 import { CateModel } from "../models/CateModel";
 import { BaseObjectEntity } from "../entity/BaseObjectEntity";
-import { CateDTO } from "../dto/CateDTO";
+import { CateDTO, EditCateDTO } from "../dto/CateDTO";
+import { CateService } from "../service/CateService";
+import { ProductCode } from "../enum/code/ProductCode";
+import { ResultCode } from "../enum/http";
 
 @Route('cate')
 @Tags('分类模块')
@@ -12,19 +15,20 @@ export class CateController extends BaseController {
 	@Get('list')
 	public async getCateList(@Request() req: ExpressRequest): Promise<BaseObjectEntity<Array<CateDTO>>> {
 		//? 获取一级列表-->由于有异步嵌套，采用将一个异步查询转换为等待执行的promise
-		const cateList1 = await CateModel.find({ level: 0 });
-		const cateListPromises = cateList1.map(async (cate1: { _id: any; toObject: () => any; }) => {
-			const cateList2 = await CateModel.find({ parentId: cate1._id });
-			const childCateListPromise = cateList2.map(async (cate2: { _id: any; toObject: () => any; }) => {
-				const cateList3 = await CateModel.find({ parentId: cate2._id });
+		const cateService = new CateService()
+		const cateList1 = await cateService.findListWithQuery({ level: 0 }, req)
+		const cateListPromises = cateList1.map(async (cate1) => {
+			const cateList2 = await cateService.findListWithQuery({ parentId: cate1.id }, req)
+			const childCateListPromise = cateList2.map(async (cate2) => {
+				const cateList3 = await cateService.findListWithQuery({ parentId: cate2.id }, req)
 				return {
-					...cate2.toObject(),  //! 这里将对象转换为普通的js对象输出
+					...cate2,
 					children: cateList3
 				}
 			});
 			const children = await Promise.all(childCateListPromise);
 			return {
-				...cate1.toObject(),
+				...cate1,
 				children: children
 			}
 		});
@@ -32,27 +36,24 @@ export class CateController extends BaseController {
 		return this.successResponse(req, finalCateList)
 	}
 
-	@Put()
-	public async addACate(@Request() req: ExpressRequest, @Body() params: CateDTO): Promise<BaseObjectEntity<CateDTO>> {
-		const { title, level = 0, parentId } = params;
+	@Put('/')
+	public async addACate(@Request() req: ExpressRequest, @Body() params: EditCateDTO): Promise<BaseObjectEntity<CateDTO>> {
+		const { title } = params;
 		if (title) {
-			const findACate = await CateModel.findOne({ title });
+			const cateService = new CateService()
+			const findACate = await cateService.findOne({ title }, req)
 			if (findACate) {
-				return this.failedResponse(req, `分类名：(${title})已存在，请勿重复创建`)
+				return this.failedResponse(req, req.t('cate.noExist', { title }), ProductCode.CATE_NO_EXIST)
 			} else {
-				const createACate = await CateModel.create({
-					title,
-					level,
-					parentId
-				});
+				const createACate = await cateService.create(params, req)
 				return this.successResponse(req, createACate)
 			}
 		} else {
-			return this.failedResponse(req, '请输入分类名称')
+			return this.failedResponse(req, req.t('cate.inputTip'), ResultCode.PARAMS_ERROR)
 		}
 	}
 
-	@Post('{id}')
+	@Post('/{id}')
 	public async editACate(@Request() req: ExpressRequest, @Path() id: string, @Body() params: CateDTO): Promise<BaseObjectEntity<CateDTO | null>> {
 		const { title } = params;
 		if (id) {
@@ -67,18 +68,18 @@ export class CateController extends BaseController {
 		}
 	}
 
-	@Delete('{id}')
+	@Delete('/{id}')
 	public async removeACate(@Request() req: ExpressRequest, @Path() id: string) {
 		if (id) {
-      const result = await CateModel.findByIdAndDelete(id);
-      if (result && result._id) {
+			const result = await CateModel.findByIdAndDelete(id);
+			if (result && result._id) {
 				return this.successResponse(req, null)
-      } else {
+			} else {
 				return this.failedResponse(req, '操作失败')
-      }
-    } else {
+			}
+		} else {
 			return this.failedResponse(req, '请传递分类id')
-    }
+		}
 	}
 
 }
