# dto/CateDTO.ts
@@ -1,9 +1,12 @@
 import { Types } from "mongoose";
-import { ISoftDeleteDTO } from "./soft-delete-dto/ISoftDeleteDTO";
+import { LanguageDTO } from "./LanguageDTO";
 
-export interface CateDTO extends ISoftDeleteDTO{
+export interface CateDTO extends LanguageDTO{
+	id: string;
 	title: string;
-	parentId: Types.ObjectId;
-	level?: number | null | undefined;
-
+	parentId?: Types.ObjectId | null | undefined;
+	level: number | null | undefined;
+	
 }
+
+export type EditCateDTO = Pick<CateDTO, 'title' | 'level'> & Partial<Pick<CateDTO, 'id'>>
